# ardctl

./: 51-android.rules  README.md  pyproject.toml  requirements.txt  setup.py
app/: __main__.py  align_screens.py  ard-align.py  ard_devices.py  ard_open.py  ard_remove_apps.py  ard_uhub.py  cli.py  open.py  open_screens.py  recover.py  remove_default_apps.py  swipe.py  swipe_screens.py
ardctl/: __main__.py  align.py  open.py  swipe.py
