[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ardctl"
version = "0.1.0"
description = "ADB & scrcpy automation toolkit"
authors = [
  {name = "Your Name", email = "your@email.com"}
]
dependencies = [
  "pywinctl",
  "pyautogui",
  "logzero",
  "tqdm",
  "psutil"
]

[project.scripts]
ardctl = "app.__main__:main"
